# hello-qt-bare

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  package.json  x
be/: encoding.js  encoding.mjs  main.js  runtime.js  runtime.mjs
ui/: Main.qml  core.mjs
ui/js/: encoding.mjs
